Fix width of input elements with size attribute * Use monospaced font when input element has size attribute, so maximum allowed number of characters can be visible

--- a/style.css
+++ b/style.css
@@ -190,3 +190,7 @@ input[name="amount"],
 input[name="anonymity"] {
   text-align: right !important;
 }
+
+input[size] {
+  font-family: monospace !important;
+}
